# Standard_bot_ROS2

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/action_interfaces/share/action_interfaces/: package.sh
install/my_cpp_py_pkg/lib/my_cpp_py_pkg/: py_node.py
install/my_cpp_py_pkg/share/my_cpp_py_pkg/: local_setup.sh  package.sh
install/sb_controller/lib/sb_controller/: standard_bot_camera_subscriber  standard_bot_controller_node  standard_bot_set_cart_pose_server_node  standard_bot_set_joint_rot_client_node  standart_bot_on_robot_gripper_server_node
install/sb_controller/share/sb_controller/: package.dsv  package.ps1  package.sh
log/: latest_build
src/action_interfaces/: CMakeLists.txt
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/action_interfaces/share/action_interfaces/: package.sh  (+1 more)
src/install/my_cpp_py_pkg/share/my_cpp_py_pkg/: local_setup.sh  package.sh  package.xml
src/log/: latest_build
src/my_cpp_py_pkg/: CMakeLists.txt
src/sb_controller/: CMakeLists.txt  package.xml  setup.py
src/sb_controller/sb_controller/: standard_bot_camera_feed_node.py  standard_bot_camera_subscriber.py  standard_bot_set_cart_pose_client_node.py  standard_bot_set_cart_pose_server_node.py  standard_bot_set_joint_rot_client_node.py  standard_bot_set_joint_rot_server_node.py  standard_bot_status_node.py  standart_bot_on_robot_gripper_client_node.py  standart_bot_on_robot_gripper_server_node.py
src/standard_bot_bringup/: CMakeLists.txt
src/standard_bot_bringup/launch/: demo.launch.py
(+54 files in other folders)
