<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_cpp_py_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sarah@todo.todo">sarah</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>standardbots</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>cv2</depend>
  <depend>numpy</depend>
  <depend>base64</depend>
  <depend>standard_bot_camera_feed_node</depend>
  <depend>standard_bot_status_node</depend>
  <depend>action_msgs</depend>

  <!-- Build dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
